--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4,15 +4,25 @@
   grid-template-columns: 250px auto;
   height: 100vh;
   overflow: scroll;
+  background-image: linear-gradient(to right, rgba(245, 221, 214, 0.8), rgba(235, 255, 245, 0.8));
 }
 
 header {
   display: flex;
-  justify-content: space-between;
-  background-color: black;
+  justify-content: space-around;
+  font-family: 'Open Sans', sans-serif;
   color: white;
   grid-column: 1 / span 2;
   padding: 10px 5px;
+  background-color: rgba(14, 20, 56, 0.8);
+  padding-top: 10px;
+  padding-bottom: 10px;
+  transition-property: background-color;
+  transition-duration: 0.3s;
+}
+
+header:hover {
+  background-color: rgba(10, 13, 32, 0.8);
 }
 
 form {
@@ -35,7 +45,13 @@ article {
 }
 
 nav {
-  background-color: #dee9ff;
+  background-color: rgba(217, 221, 238, 0.8);
+  transition-property: background-color;
+  transition-duration: 0.3s;
+}
+
+nav:hover {
+  background-color: rgba(189, 193, 216, 0.8);
 }
 
 nav p:hover {
